@@ -7,19 +7,11 @@ import io.fabric8.kubernetes.api.model.LabelSelector;
 import io.fabric8.kubernetes.api.model.Pod;
 import io.fabric8.kubernetes.api.model.PodSpec;
 import io.fabric8.kubernetes.api.model.PodStatus;
-import io.fabric8.kubernetes.api.model.apps.DaemonSet;
-import io.fabric8.kubernetes.api.model.apps.Deployment;
-import io.fabric8.kubernetes.api.model.apps.ReplicaSet;
-import io.fabric8.kubernetes.api.model.apps.StatefulSet;
-import io.fabric8.kubernetes.api.model.batch.v1.CronJob;
-import io.fabric8.kubernetes.api.model.batch.v1.Job;
+import io.fabric8.kubernetes.api.model.apps.*;
+import io.fabric8.kubernetes.api.model.batch.v1.*;
 import io.fabric8.kubernetes.client.KubernetesClient;
 import io.fabric8.kubernetes.client.KubernetesClientException;
 import io.fabric8.kubernetes.client.dsl.PodResource;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Component;
-
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -28,6 +20,9 @@ import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.regex.PatternSyntaxException;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Component;
 
 /**
  * LLM-callable tools for reading container logs.
@@ -52,9 +47,7 @@ public class LogsTool {
     // LLM tools
     // ──────────────────────────────────────────────────────────────────────────
 
-    @LlmTool(
-            name = "getPodLogs",
-            description = """
+    @LlmTool(name = "getPodLogs", description = """
                     Use this tool to read stdout/stderr logs from a single container in a pod.
                     Required for diagnosing WHY an application is misbehaving once you've already
                     identified WHAT is broken via inspectPodResourceHealth or inspectPodNetworking.
@@ -64,14 +57,13 @@ public class LogsTool {
                     sinceSeconds (>0) limits to logs newer than N seconds ago; pass 0 to ignore.
                     Output is hard-capped at 64 KiB and truncation is annotated. For previous
                     (crashed) container logs use getPreviousContainerLogs.
-                    """
-    )
-    public String getPodLogs(String namespace, String podName, String containerName,
-                             int tailLines, int sinceSeconds) {
-        Pod pod = kubernetesClient.pods().inNamespace(namespace).withName(podName).get();
+                    """)
+    public String getPodLogs(String namespace, String podName, String containerName, int tailLines, int sinceSeconds) {
+        Pod pod =
+                kubernetesClient.pods().inNamespace(namespace).withName(podName).get();
         if (pod == null) {
-            return "ERROR: pod " + namespace + "/" + podName + " not found.\n"
-                    + "Hint: call findPods(\"" + safeSearchTerm(podName) + "\") to locate the right pod.";
+            return "ERROR: pod " + namespace + "/" + podName + " not found.\n" + "Hint: call findPods(\""
+                    + safeSearchTerm(podName) + "\") to locate the right pod.";
         }
         String resolvedContainer = resolveContainerName(pod, containerName);
         if (resolvedContainer == null) {
@@ -80,9 +72,14 @@ public class LogsTool {
 
         int effectiveTail = clampTail(tailLines);
         StringBuilder sb = new StringBuilder();
-        sb.append("=== POD LOGS: ").append(namespace).append("/").append(podName)
-                .append("  container=").append(resolvedContainer)
-                .append("  tailLines=").append(effectiveTail);
+        sb.append("=== POD LOGS: ")
+                .append(namespace)
+                .append("/")
+                .append(podName)
+                .append("  container=")
+                .append(resolvedContainer)
+                .append("  tailLines=")
+                .append(effectiveTail);
         if (sinceSeconds > 0) sb.append("  sinceSeconds=").append(sinceSeconds);
         sb.append(" ===\n\n");
 
@@ -95,19 +92,17 @@ public class LogsTool {
         return sb.toString();
     }
 
-    @LlmTool(
-            name = "getPreviousContainerLogs",
-            description = """
+    @LlmTool(name = "getPreviousContainerLogs", description = """
                     Use this tool ONLY for post-mortem of a CrashLoopBackOff or recently-restarted
                     container — it returns the stdout/stderr of the PREVIOUS instance (kubectl logs
                     --previous). The current instance's logs come from getPodLogs. Pass the
                     namespace, pod name, and container name (use "" for the first container). If
                     the container has never restarted, this returns a 'no previous instance' note.
                     Output is hard-capped at 64 KiB.
-                    """
-    )
+                    """)
     public String getPreviousContainerLogs(String namespace, String podName, String containerName) {
-        Pod pod = kubernetesClient.pods().inNamespace(namespace).withName(podName).get();
+        Pod pod =
+                kubernetesClient.pods().inNamespace(namespace).withName(podName).get();
         if (pod == null) {
             return "ERROR: pod " + namespace + "/" + podName + " not found.";
         }
@@ -118,9 +113,15 @@ public class LogsTool {
 
         int restarts = restartCount(pod, resolvedContainer);
         StringBuilder sb = new StringBuilder();
-        sb.append("=== PREVIOUS CONTAINER LOGS: ").append(namespace).append("/").append(podName)
-                .append("  container=").append(resolvedContainer)
-                .append("  restarts=").append(restarts).append(" ===\n\n");
+        sb.append("=== PREVIOUS CONTAINER LOGS: ")
+                .append(namespace)
+                .append("/")
+                .append(podName)
+                .append("  container=")
+                .append(resolvedContainer)
+                .append("  restarts=")
+                .append(restarts)
+                .append(" ===\n\n");
 
         if (restarts <= 0) {
             sb.append("(container has not restarted — there is no previous instance to read)\n");
@@ -128,8 +129,7 @@ public class LogsTool {
             return sb.toString();
         }
 
-        String logs = fetchLog(namespace, podName, resolvedContainer,
-                clampTail(DEFAULT_TAIL_LINES), 0, true);
+        String logs = fetchLog(namespace, podName, resolvedContainer, clampTail(DEFAULT_TAIL_LINES), 0, true);
         if (logs == null || logs.isEmpty()) {
             sb.append("(kubelet returned no previous-log content — log may have been rotated\n");
             sb.append(" or the container terminated before writing anything to stdout/stderr)\n");
@@ -139,17 +139,14 @@ public class LogsTool {
         return sb.toString();
     }
 
-    @LlmTool(
-            name = "getWorkloadLogs",
-            description = """
+    @LlmTool(name = "getWorkloadLogs", description = """
                     Use this tool to tail logs across ALL pods of a workload (Deployment,
                     StatefulSet, DaemonSet, ReplicaSet, Job, CronJob). Useful when one replica
                     succeeds and another fails, or when you don't yet know which replica is sick.
                     Returns the last 'tailLines' lines from each replica (default 200, max 2000),
                     capped to 10 replicas to keep output manageable. Each block is prefixed with
                     its pod name. Total output is hard-capped at 64 KiB.
-                    """
-    )
+                    """)
     public String getWorkloadLogs(String namespace, String kind, String name, int tailLines) {
         Map<String, String> selector = resolveSelector(namespace, kind, name);
         if (selector == null) {
@@ -161,23 +158,35 @@ public class LogsTool {
             return "ERROR: " + kind + " " + namespace + "/" + name + " has no matchLabels selector.";
         }
 
-        List<Pod> pods = kubernetesClient.pods()
+        List<Pod> pods = kubernetesClient
+                .pods()
                 .inNamespace(namespace)
                 .withLabels(selector)
-                .list().getItems();
+                .list()
+                .getItems();
         if (pods.isEmpty()) {
-            return "No pods found for " + kind + " " + namespace + "/" + name
-                    + " with selector " + selector + ".";
+            return "No pods found for " + kind + " " + namespace + "/" + name + " with selector " + selector + ".";
         }
 
         int effectiveTail = clampTail(tailLines);
         StringBuilder sb = new StringBuilder();
-        sb.append("=== WORKLOAD LOGS: ").append(kind).append(" ").append(namespace).append("/").append(name)
-                .append("  pods=").append(pods.size())
-                .append("  tailLines=").append(effectiveTail).append(" ===\n");
+        sb.append("=== WORKLOAD LOGS: ")
+                .append(kind)
+                .append(" ")
+                .append(namespace)
+                .append("/")
+                .append(name)
+                .append("  pods=")
+                .append(pods.size())
+                .append("  tailLines=")
+                .append(effectiveTail)
+                .append(" ===\n");
         if (pods.size() > MAX_REPLICAS_TAILED) {
-            sb.append("(showing first ").append(MAX_REPLICAS_TAILED).append(" replicas of ")
-                    .append(pods.size()).append(")\n");
+            sb.append("(showing first ")
+                    .append(MAX_REPLICAS_TAILED)
+                    .append(" replicas of ")
+                    .append(pods.size())
+                    .append(")\n");
         }
         sb.append("\n");
 
@@ -204,9 +213,10 @@ public class LogsTool {
                 sb.append("(no logs)\n\n");
                 continue;
             }
-            int spend = Math.min(logs.length(), Math.max(1024, budget / Math.max(1, MAX_REPLICAS_TAILED - tailed + 1)));
+            int spend = Math.clamp(budget / Math.max(1, MAX_REPLICAS_TAILED - tailed + 1), 1024, logs.length());
             String slice = logs.length() > spend
-                    ? "...[truncated " + (logs.length() - spend) + " bytes]...\n" + logs.substring(logs.length() - spend)
+                    ? "...[truncated " + (logs.length() - spend) + " bytes]...\n"
+                            + logs.substring(logs.length() - spend)
                     : logs;
             sb.append(slice);
             if (!slice.endsWith("\n")) sb.append("\n");
@@ -216,23 +226,20 @@ public class LogsTool {
         return sb.toString();
     }
 
-    @LlmTool(
-            name = "grepPodLogs",
-            description = """
+    @LlmTool(name = "grepPodLogs", description = """
                     Use this tool to search a single container's logs for a regex pattern WITHOUT
                     pulling the entire log stream into the LLM. Server-side fetch, client-side
                     regex match — only matching lines are returned. Ideal for hunting stack traces,
                     error codes, or specific request IDs in noisy logs. Pattern is a Java regex
                     (case-insensitive). tailLines bounds how many recent lines are scanned
                     (default 200, max 2000). Returns up to 200 matched lines.
-                    """
-    )
-    public String grepPodLogs(String namespace, String podName, String containerName,
-                              String pattern, int tailLines) {
+                    """)
+    public String grepPodLogs(String namespace, String podName, String containerName, String pattern, int tailLines) {
         if (pattern == null || pattern.isBlank()) {
             return "ERROR: pattern must not be empty. Pass a Java regex like 'ERROR|Exception|timeout'.";
         }
-        Pod pod = kubernetesClient.pods().inNamespace(namespace).withName(podName).get();
+        Pod pod =
+                kubernetesClient.pods().inNamespace(namespace).withName(podName).get();
         if (pod == null) {
             return "ERROR: pod " + namespace + "/" + podName + " not found.";
         }
@@ -250,10 +257,18 @@ public class LogsTool {
         int effectiveTail = clampTail(tailLines);
         String logs = fetchLog(namespace, podName, resolvedContainer, effectiveTail, 0, false);
         StringBuilder sb = new StringBuilder();
-        sb.append("=== GREP POD LOGS: ").append(namespace).append("/").append(podName)
-                .append("  container=").append(resolvedContainer)
-                .append("  pattern=/").append(pattern).append("/i")
-                .append("  scanned=").append(effectiveTail).append(" lines ===\n\n");
+        sb.append("=== GREP POD LOGS: ")
+                .append(namespace)
+                .append("/")
+                .append(podName)
+                .append("  container=")
+                .append(resolvedContainer)
+                .append("  pattern=/")
+                .append(pattern)
+                .append("/i")
+                .append("  scanned=")
+                .append(effectiveTail)
+                .append(" lines ===\n\n");
 
         if (logs == null || logs.isEmpty()) {
             sb.append("(no logs available to grep)\n");
@@ -292,8 +307,8 @@ public class LogsTool {
     // Internals
     // ──────────────────────────────────────────────────────────────────────────
 
-    private String fetchLog(String namespace, String podName, String container,
-                            int tailLines, int sinceSeconds, boolean previous) {
+    private String fetchLog(
+            String namespace, String podName, String container, int tailLines, int sinceSeconds, boolean previous) {
         try {
             PodResource res = kubernetesClient.pods().inNamespace(namespace).withName(podName);
             var stage = res.inContainer(container);
@@ -301,8 +316,7 @@ public class LogsTool {
             var afterSince = sinceSeconds > 0 ? afterPrev.sinceSeconds(sinceSeconds) : afterPrev;
             return afterSince.tailingLines(tailLines).getLog();
         } catch (KubernetesClientException e) {
-            log.debug("Could not fetch logs for {}/{} container {}: {}",
-                    namespace, podName, container, e.getMessage());
+            log.debug("Could not fetch logs for {}/{} container {}: {}", namespace, podName, container, e.getMessage());
             return "ERROR: " + describeLogError(e);
         }
     }
@@ -337,11 +351,11 @@ public class LogsTool {
     }
 
     private String resolveContainerName(Pod pod, String containerName) {
-        List<Container> containers = Optional.ofNullable(pod.getSpec())
-                .map(PodSpec::getContainers).orElse(Collections.emptyList());
+        List<Container> containers =
+                Optional.ofNullable(pod.getSpec()).map(PodSpec::getContainers).orElse(Collections.emptyList());
         if (containers.isEmpty()) return null;
         if (containerName == null || containerName.isBlank()) {
-            return containers.get(0).getName();
+            return containers.getFirst().getName();
         }
         return containers.stream()
                 .map(Container::getName)
@@ -351,26 +365,32 @@ public class LogsTool {
     }
 
     private String primaryContainerName(Pod pod) {
-        return Optional.ofNullable(pod.getSpec()).map(PodSpec::getContainers)
-                .orElse(Collections.emptyList())
-                .stream().findFirst().map(Container::getName).orElse(null);
+        return Optional.ofNullable(pod.getSpec()).map(PodSpec::getContainers).orElse(Collections.emptyList()).stream()
+                .findFirst()
+                .map(Container::getName)
+                .orElse(null);
     }
 
     private String containerNotFoundMessage(Pod pod, String requested) {
-        List<String> names = Optional.ofNullable(pod.getSpec()).map(PodSpec::getContainers)
-                .orElse(Collections.emptyList())
-                .stream().map(Container::getName).sorted(Comparator.naturalOrder()).toList();
+        List<String> names =
+                Optional.ofNullable(pod.getSpec()).map(PodSpec::getContainers).orElse(Collections.emptyList()).stream()
+                        .map(Container::getName)
+                        .sorted(Comparator.naturalOrder())
+                        .toList();
         return "ERROR: container '" + (requested == null ? "" : requested) + "' not found in pod "
                 + pod.getMetadata().getNamespace() + "/" + pod.getMetadata().getName()
                 + ". Available containers: " + (names.isEmpty() ? "<none>" : names);
     }
 
     private int restartCount(Pod pod, String container) {
-        return Optional.ofNullable(pod.getStatus()).map(PodStatus::getContainerStatuses)
-                .orElse(Collections.emptyList()).stream()
+        return Optional.ofNullable(pod.getStatus())
+                .map(PodStatus::getContainerStatuses)
+                .orElse(Collections.emptyList())
+                .stream()
                 .filter(cs -> container.equals(cs.getName()))
                 .mapToInt(ContainerStatus::getRestartCount)
-                .findFirst().orElse(0);
+                .findFirst()
+                .orElse(0);
     }
 
     private String safeSearchTerm(String s) {
@@ -380,48 +400,89 @@ public class LogsTool {
     private Map<String, String> resolveSelector(String namespace, String kind, String name) {
         return switch (kind == null ? "" : kind.toLowerCase()) {
             case "deployment" -> {
-                Deployment d = kubernetesClient.apps().deployments()
-                        .inNamespace(namespace).withName(name).get();
-                yield d == null ? null : Optional.ofNullable(d.getSpec())
-                        .map(s -> s.getSelector()).map(LabelSelector::getMatchLabels)
-                        .orElse(Collections.emptyMap());
+                Deployment d = kubernetesClient
+                        .apps()
+                        .deployments()
+                        .inNamespace(namespace)
+                        .withName(name)
+                        .get();
+                yield d == null
+                        ? null
+                        : Optional.ofNullable(d.getSpec())
+                                .map(DeploymentSpec::getSelector)
+                                .map(LabelSelector::getMatchLabels)
+                                .orElse(Collections.emptyMap());
             }
             case "statefulset" -> {
-                StatefulSet ss = kubernetesClient.apps().statefulSets()
-                        .inNamespace(namespace).withName(name).get();
-                yield ss == null ? null : Optional.ofNullable(ss.getSpec())
-                        .map(s -> s.getSelector()).map(LabelSelector::getMatchLabels)
-                        .orElse(Collections.emptyMap());
+                StatefulSet ss = kubernetesClient
+                        .apps()
+                        .statefulSets()
+                        .inNamespace(namespace)
+                        .withName(name)
+                        .get();
+                yield ss == null
+                        ? null
+                        : Optional.ofNullable(ss.getSpec())
+                                .map(StatefulSetSpec::getSelector)
+                                .map(LabelSelector::getMatchLabels)
+                                .orElse(Collections.emptyMap());
             }
             case "daemonset" -> {
-                DaemonSet ds = kubernetesClient.apps().daemonSets()
-                        .inNamespace(namespace).withName(name).get();
-                yield ds == null ? null : Optional.ofNullable(ds.getSpec())
-                        .map(s -> s.getSelector()).map(LabelSelector::getMatchLabels)
-                        .orElse(Collections.emptyMap());
+                DaemonSet ds = kubernetesClient
+                        .apps()
+                        .daemonSets()
+                        .inNamespace(namespace)
+                        .withName(name)
+                        .get();
+                yield ds == null
+                        ? null
+                        : Optional.ofNullable(ds.getSpec())
+                                .map(DaemonSetSpec::getSelector)
+                                .map(LabelSelector::getMatchLabels)
+                                .orElse(Collections.emptyMap());
             }
             case "replicaset" -> {
-                ReplicaSet rs = kubernetesClient.apps().replicaSets()
-                        .inNamespace(namespace).withName(name).get();
-                yield rs == null ? null : Optional.ofNullable(rs.getSpec())
-                        .map(s -> s.getSelector()).map(LabelSelector::getMatchLabels)
-                        .orElse(Collections.emptyMap());
+                ReplicaSet rs = kubernetesClient
+                        .apps()
+                        .replicaSets()
+                        .inNamespace(namespace)
+                        .withName(name)
+                        .get();
+                yield rs == null
+                        ? null
+                        : Optional.ofNullable(rs.getSpec())
+                                .map(ReplicaSetSpec::getSelector)
+                                .map(LabelSelector::getMatchLabels)
+                                .orElse(Collections.emptyMap());
             }
             case "job" -> {
-                Job j = kubernetesClient.batch().v1().jobs()
-                        .inNamespace(namespace).withName(name).get();
-                yield j == null ? null : Optional.ofNullable(j.getSpec())
-                        .map(s -> s.getSelector()).map(LabelSelector::getMatchLabels)
-                        .orElse(Collections.emptyMap());
+                Job j = kubernetesClient
+                        .batch()
+                        .v1()
+                        .jobs()
+                        .inNamespace(namespace)
+                        .withName(name)
+                        .get();
+                yield j == null
+                        ? null
+                        : Optional.ofNullable(j.getSpec())
+                                .map(JobSpec::getSelector)
+                                .map(LabelSelector::getMatchLabels)
+                                .orElse(Collections.emptyMap());
             }
             case "cronjob" -> {
-                CronJob cj = kubernetesClient.batch().v1().cronjobs()
-                        .inNamespace(namespace).withName(name).get();
+                CronJob cj = kubernetesClient
+                        .batch()
+                        .v1()
+                        .cronjobs()
+                        .inNamespace(namespace)
+                        .withName(name)
+                        .get();
                 if (cj == null) yield null;
                 yield Optional.ofNullable(cj.getSpec())
-                        .map(s -> s.getJobTemplate())
-                        .map(t -> t.getSpec())
-                        .map(s -> s.getSelector())
+                        .map(CronJobSpec::getJobTemplate)
+                        .map(JobTemplateSpec::getSpec)
+                        .map(JobSpec::getSelector)
                         .map(LabelSelector::getMatchLabels)
                         .orElse(Collections.emptyMap());
             }
